# livecell-classification-benchmark

./: .gitignore  README.md  pyproject.toml
livecell_classification/: __init__.py  config.py  data.py  evaluation.py  optim.py  plotting.py  system.py  timing.py  training.py  utils.py
livecell_classification/models/: __init__.py  custom_cnn.py  resnet2.py
scripts/: train.py
tests/: test_package.py
